# QuantMuse

./: .coverage  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_AI_Modules.md  README_Factor_Analysis.md  README_LLM_NLP_Complete.md  README_LangChain_LLM.md  README_Quantitative_Strategies.md  README_Web_Interface.md  TSLA分析执行指南.md  Trading Engine Architecture.md  ai_intelligence_lite.py  config.example.json  demo_charts_websocket.py  demo_llm_nlp_simple.py  intelligent_risk_manager.py  main.py  pytest.ini  reinforcement_learning_optimizer.py  run_dashboard.py  run_tsla_quick.py  run_web_interface.py  run_web_simple.py  setup.py  simple_dashboard.py  test.cpp  test_nlp_effect.py  tsla_demo_analysis.py  tsla_offline_real_data.py  tsla_real_analysis.py  tsla_real_dashboard.py  tsla_simple_analysis.py  tsla_strategy_analysis.py  项目说明文档.md
backend/: CMakeLists.txt
backend/include/: data_loader.hpp  order_executor.hpp  risk_manager.hpp  strategy.hpp
backend/include/common/: types.hpp
backend/src/: data_loader.cpp  main.cpp  order_executor.cpp  risk_manager.cpp  strategy.cpp
backend/tests/: test_data_loader.cpp  test_risk_manager.cpp
config/: config.json
data_service/: __init__.py  config.py
data_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: ai_sentiment_analysis.py  extensible_strategy_demo.py  factor_analysis_demo.py  fetch_public_data.py  langchain_llm_demo.py  llm_nlp_complete_demo.py  quantitative_strategies.py  yahoo_example.py
static/: index.html
tests/: conftest.py  test_binance_fetcher.py  (+3 more)
(+68 files in other folders)
